--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,7 @@
-version: '3'
 services:
   homeassistant:
-    image: "ghcr.io/home-assistant/home-assistant:stable"
+    image: homeassistant/home-assistant:stable
     container_name: homeassistant
-
     restart: unless-stopped
     privileged: true
     network_mode: host
@@ -17,7 +15,6 @@ services:
   mosquitto:
     image: eclipse-mosquitto
     container_name: mosquitto
-
     restart: unless-stopped
     ports:
       - "1883:1883"
@@ -25,3 +22,12 @@ services:
       - "./mosquitto/config:/mosquitto/config"
       - "./mosquitto/data:/mosquitto/data"
       - "./mosquitto/log:/mosquitto/log"
+  
+  cloudflared:
+      image: cloudflare/cloudflared
+      container_name: cloudflared
+      network_mode: host
+      restart: unless-stopped
+      command: tunnel run
+      environment:
+        - TUNNEL_TOKEN=${TUNNEL_TOKEN}
