allow proxies of cloudflared

--- a/homeassistant/config/configuration.yaml
+++ b/homeassistant/config/configuration.yaml
@@ -9,3 +9,8 @@ frontend:
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
+
+http:
+    use_x_forwarded_for: true
+    trusted_proxies:
+      - 127.0.0.1
