--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
       - "./mosquitto/log:/mosquitto/log"
   
   homeassistant:
-    image: homeassistant/home-assistant:stable
+    image: homeassistant/home-assistant:2024.8.3
     restart: unless-stopped
     privileged: true
     network_mode: host
